[27/05/2022] Profile and experiences update

--- a/index.html
+++ b/index.html
@@ -90,12 +90,20 @@
                             <h2 class="current"><a href="https://www.somosadd.com.br/" target="_blank">.add <i class="fas fa-external-link-alt"></i></a></h2>
                             <div class="role">Node.js Back-end Developer (recent)</div>
                             <div class="full">
-                                <strong>.add is a company from Brazil offering a lot of solutions to your company like Text Analytics, OutSystems, Agile Projects, Outsourcing and others. Today at .add I work as Node.js Back-end Developer outsourced employee for <a href="https://www.brasilcap.com.br/"><strong>BrasilCap</strong></a>, a company from <a href="https://www.bb.com.br"><strong>Banco do Brasil</strong></a> working with insurance capitalization. More info soon.
+                                <strong>.add is a company from Brazil offering a lot of solutions to your company like Text Analytics, OutSystems, Agile Projects, Outsourcing and others. Today at .add I work as Node.js Back-end Developer outsourced for <a href="https://www.brasilcap.com.br/" target="_blank"><strong>BrasilCap</strong></a>, a company from <a href="https://www.bb.com.br" target="_blank"><strong>Banco do Brasil</strong></a> working with insurance capitalization. The technologies that I'm working now are Node.js, AWS Lambda, API Gateways, SQS, SNS and Batch, Git, Scrum, Asana and others. More info soon.
                             </div>
                         </li>
 
                         <li class="col-12 exp text-center">
-                            <h2 class="current"><a href="https://www.callflex.com.br/" target="_blank">Callflex Sistemas Digitais <i class="fas fa-external-link-alt"></i></a></h2>
+                            <h2><a href="https://www.objectedge.com/" target="_blank">Object Edge <i class="fas fa-external-link-alt"></i></a></h2>
+                            <div class="role">Senior Full-stack Developer</div>
+                            <div class="full">
+                                Object Edge is a company from USA extended in Brazil and India. Object Edge works with many services like e-Commerce and Microservices implementations, Experience Design, Support, Maintence, Data Management, CPQ and others. I joined Object Edge to work with technologies such as JavaScript, Reactjs, Node.js, GraphQL, Apollo Server, MySQL, Scrum, Jira and others.
+                            </div>
+                        </li>
+                        
+                        <li class="col-12 exp text-center">
+                            <h2><a href="https://www.callflex.com.br/" target="_blank">Callflex Sistemas Digitais <i class="fas fa-external-link-alt"></i></a></h2>
                             <div class="role">Full-stack Developer</div>
                             <div class="full">
                                 Callflex is a company located in São Paulo, SP - Brazil and offers solutions for the field of Telephony and Call Centers, such as Adaptive Predictive Dialers and IVR, Communication Platforms, Robots for Process Automation, Service Tabulator, Education Incentive with Educational Platform among others. I joined Callflex as a Full-Stack Developer to develop new solutions, perform maintenance and improvements to the system in general, creating new tools, integrations, microservices, among others, all in a panel where the customer manages all of their contracted products. This panel contains several modules that allow you to customize and manage the entire operation of your contracted service, such as managing your strategies in an advanced way, generating advanced reports, in addition to a multitude of tools and functionalities. The panel currently uses PHP 5.6, MySQL, HTML, CSS and JavaScript mostly. At Callflex we also use Gitlab for system versioning and new releases for customers, VPN, Linux Debian, and several other technologies.
@@ -104,7 +112,7 @@
 
                         <li class="col-12 exp text-center">
                             <h2><a href="https://www.webedia.com.br/" target="_blank">Webedia Group <i class="fas fa-external-link-alt"></i></a></h2>
-                            <div class="role">Game Broadcast</div>
+                            <div class="role">Game Broadcast (Freelance)</div>
                             <div class="full">
                                 Webedia Group is a multinational company operating in Brazil in the field of technology, games, food, audiovisual production, etc, and is the owner of several brands such as TudoGostoso, Parafernelha, AdoroCinema, IGN, MGG, NerdCubo, PureBreak, PurePeople, among others. As I've always worked with games and always loved this niche, and I also have vast knowledge in development, I was invited to participate in the production of some events and today I also provide services for Webedia SP only as a Service Provider in the Games Event Production branch and Broadcasting of Games Championships.
                             </div>
